--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,23 @@
 }
 .logo{
     display: flex;
+    z-index: 1;
+    margin-left: auto;
+    margin-right: auto;
     justify-content: center;
     margin-top: 70px;
 }
 .compteAReb{
     display: flex;
+    z-index: 2;
     flex-direction: column;
     padding: 50px;
 }
 .bloc1{
     display: flex;
+}
+body{
+    background-image: url("../img/rameau.png");
+    background-repeat: no-repeat;
+    background-position: center 250px;
 }
