--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,10 +19,10 @@
 .compteAReb{
     display: flex;
     z-index: 2;
-    flex-direction: column;
+    flex-direction: row;
     padding: 50px;
-    border: 1px solid black;
-
+    background-color: #183f28;
+    border-radius: 10px;
 }
 .bloc1{
     display: flex;
@@ -33,14 +33,50 @@ body{
     background-position: center 300px;
 }
 #jours{
-    border: 1px solid black;
+    color: white;
+    border: 1px solid white;
+    padding: 10px;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+}
+.jours{
+    display: flex;
+    flex-direction: column;
+    margin-right: 15px;
 }
 #heures{
-    border: 1px solid black;
+    color: white;
+    border: 1px solid white;
+    padding: 10px;
+    border-radius: 5px;
+}
+.heures{
+    display: flex;
+    flex-direction: column;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 #min{
-    border: 1px solid black;
+    color: white;
+    border: 1px solid white;
+    padding: 10px;
+    border-radius: 5px;
+}
+.min{
+    display: flex;
+    flex-direction: column;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 #sec{
-    border: 1px solid black;
+    color: white;
+    border: 1px solid white;
+    padding: 10px;
+    border-radius: 5px;
+}
+.sec{
+    display: flex;
+    flex-direction: column;
+    margin-left: 15px;
 }
