--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
 .titre{
-    font: 'Source Sans Pro', sans-serif;
     margin: 0px;
 }
 .titreEsp{
@@ -7,6 +6,8 @@
 }
 .header{
     text-align: center;
+    font-weight: 800;
+    margin-bottom: 40px;
 }
 .logo{
     display: flex;
@@ -23,6 +24,8 @@
     padding: 50px;
     background-color: #183f28;
     border-radius: 10px;
+    margin-left: 50px;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 .bloc1{
     display: flex;
@@ -30,53 +33,73 @@
 body{
     background-image: url("../img/lavande.png");
     background-repeat: no-repeat;
-    background-position: center 300px;
+    background-position: center 420px;
+    font-family: 'Shippori Mincho B1', serif;
 }
 #jours{
     color: white;
     border: 1px solid white;
+    font-size: 40px;
     padding: 10px;
-    width: 10px;
-    height: 10px;
     border-radius: 5px;
+    text-align: center;
+    font: 'Source Sans Pro', sans-serif;
 }
 .jours{
     display: flex;
     flex-direction: column;
     margin-right: 15px;
+    text-align: center;
+    color: white;
+    font-size: 20px;
 }
 #heures{
     color: white;
     border: 1px solid white;
+    font-size: 40px;
     padding: 10px;
     border-radius: 5px;
+    text-align: center;
 }
 .heures{
     display: flex;
     flex-direction: column;
     margin-left: 15px;
     margin-right: 15px;
+    text-align: center;
+    color: white;
+    font-size: 20px;
 }
 #min{
     color: white;
     border: 1px solid white;
+    font-size: 40px;
     padding: 10px;
     border-radius: 5px;
+    text-align: center;
 }
 .min{
     display: flex;
     flex-direction: column;
     margin-left: 15px;
     margin-right: 15px;
+    text-align: center;
+    color: white;
+    font-size: 20px;
 }
 #sec{
     color: white;
     border: 1px solid white;
+    font-size: 40px;
     padding: 10px;
     border-radius: 5px;
+    text-align: center;
 }
 .sec{
     display: flex;
     flex-direction: column;
     margin-left: 15px;
+    text-align: center;
+    color: white;
+    font-size: 20px;
 }
