mise en forme date avec CaR

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 .header{z-index: 0;
     text-align: center;
     font-weight: 800;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -27,7 +27,6 @@
     padding: 50px;
     background-color: #183f28;
     border-radius: 10px;
-    margin-left: 50px;
     font-family: 'Source Sans Pro', sans-serif;
 }
 .bloc1{
@@ -38,7 +37,7 @@ body{
     background-repeat: no-repeat;
     background-position: center 420px;
     font-family: 'Shippori Mincho B1', serif;
-    margin: 0px 40px 0px 40px;
+    margin: 0px 80px 0px 80px;
 }
 #jours{
     color: white;
@@ -145,9 +144,50 @@ body{
     display: flex;
 }
 .saveTheDate{
-    margin-left: 50px;
+    font-size: 30px;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 0px 15px 10px 15px;
 }
 .blocCaR{
     display: flex;
+}
+.secondaryHeader{
+    display: flex;
     flex-direction: column;
+}
+.jour{
+    font-size: 70px;
+}
+.annee{
+    text-align: center;
+    font-size: 25px;
+    margin-top: 5px;
+    margin-top: 0px;
+}
+.date{
+    display: flex;
+}
+.journee{
+    text-align: center;
+    padding-top: 30px;
+    width: 140px;
+}
+.numeroJournee{
+    text-align: center;
+}
+.mois{
+    text-align: center;
+    padding-top: 30px;
+    width: 140px;
+}
+.saveTheDate1{
+    font-size: 30px;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 0px 15px 10px 15px;
+    height: 43px;
+    margin-top: 30px;
+    width: 110px;
+    text-align: center;
 }
