--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,8 @@
 body{
     background-image: url("../img/lavande.png");
     background-repeat: no-repeat;
-    background-position: center 420px;
+    background-position: center 200px;
+    background-size: 10%;
     font-family: 'Shippori Mincho B1', serif;
     margin: 0px 80px 0px 80px;
 }
@@ -144,9 +145,7 @@ body{
     display: flex;
 }
 .saveTheDate{
-    font-size: 30px;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+    font-size: 40px;
     padding: 0px 15px 10px 15px;
 }
 .blocCaR{
@@ -155,39 +154,13 @@ body{
 .secondaryHeader{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
-.jour{
-    font-size: 70px;
-}
-.annee{
-    text-align: center;
-    font-size: 25px;
-    margin-top: 5px;
-    margin-top: 0px;
-}
-.date{
+.header2{
+    margin-top: 300px;
     display: flex;
+    flex-direction: column;
 }
-.journee{
-    text-align: center;
-    padding-top: 30px;
-    width: 140px;
-}
-.numeroJournee{
-    text-align: center;
-}
-.mois{
-    text-align: center;
-    padding-top: 30px;
-    width: 140px;
-}
-.saveTheDate1{
-    font-size: 30px;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    padding: 0px 15px 10px 15px;
-    height: 43px;
-    margin-top: 30px;
-    width: 110px;
+.blocSTD{
     text-align: center;
 }
