--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,6 +159,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 25px;
 }
 .header2{
     margin-top: 300px;
@@ -193,12 +194,10 @@ body{
 
 /* ************** MEDIA QUERIES ***************/
 
-@media (max-width:1920px){
+@media (min-width:1920px){
     .blocSTD{
         margin-top: 80px;
     }
-}
-@media (max-width: 1920px){
     .allInfo{
         margin-top: 120px;
     }
