--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,9 @@ body{
     font-family: 'Shippori Mincho B1', serif;
     margin: 0px 80px 0px 80px;
 }
+.lavande{
+    z-index: 2;
+}
 .titre{
     margin: 0px;
 }
@@ -13,7 +16,7 @@ body{
     font-size: 50px;
     margin: 0px;
 }
-.header{z-index: 0;
+.header{
     text-align: center;
     font-weight: 800;
     margin-bottom: 10px;
@@ -143,6 +146,7 @@ body{
 .mainHeader{
     text-align: center;
     display: flex;
+    z-index: 2;
     background-color: white;
     position: -webkit-sticky;
     position: sticky;
@@ -168,6 +172,7 @@ body{
 }
 .blocSTD{
     text-align: center;
+    z-index: 2;
 }
 .date{
     font-size: 20px;
@@ -177,6 +182,7 @@ body{
 }
 .chevron{
     width: 3%;
+    z-index: 2;
     padding-top: 35px;
 }
 .allInfo{
@@ -191,7 +197,113 @@ body{
     height: 300px;
     border-radius: 10px;
 }
+/* Animations*/
+@keyframes animate {
+    0%{
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+    }
+    100%{
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
+    }
+}
 
+.background {
+    position: fixed;
+    z-index: 1;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    background: #ffff;
+    overflow: hidden;
+}
+.background li {
+    position: absolute;
+    z-index: 1;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: #183f28;
+    animation: animate 19s linear infinite;
+}
+
+.background li:nth-child(0) {
+    left: 65%;
+    width: 183px;
+    height: 183px;
+    bottom: -183px;
+    animation-delay: 1s;
+}
+.background li:nth-child(1) {
+    left: 65%;
+    width: 159px;
+    height: 159px;
+    bottom: -159px;
+    animation-delay: 3s;
+}
+.background li:nth-child(2) {
+    left: 72%;
+    width: 112px;
+    height: 112px;
+    bottom: -112px;
+    animation-delay: 1s;
+}
+.background li:nth-child(3) {
+    left: 47%;
+    width: 154px;
+    height: 154px;
+    bottom: -154px;
+    animation-delay: 3s;
+}
+.background li:nth-child(4) {
+    left: 50%;
+    width: 155px;
+    height: 155px;
+    bottom: -155px;
+    animation-delay: 14s;
+}
+.background li:nth-child(5) {
+    left: 72%;
+    width: 125px;
+    height: 125px;
+    bottom: -125px;
+    animation-delay: 12s;
+}
+.background li:nth-child(6) {
+    left: 40%;
+    width: 104px;
+    height: 104px;
+    bottom: -104px;
+    animation-delay: 18s;
+}
+.background li:nth-child(7) {
+    left: 61%;
+    width: 114px;
+    height: 114px;
+    bottom: -114px;
+    animation-delay: 34s;
+}
+.background li:nth-child(8) {
+    left: 54%;
+    width: 171px;
+    height: 171px;
+    bottom: -171px;
+    animation-delay: 27s;
+}
+.background li:nth-child(9) {
+    left: 38%;
+    width: 112px;
+    height: 112px;
+    bottom: -112px;
+    animation-delay: 44s;
+}
 /* ************** MEDIA QUERIES ***************/
 
 @media (min-width:1920px){
