--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,7 @@ body{
     margin-bottom: 25px;
 }
 .header2{
-    margin-top: 300px;
+    /* margin-top: 300px; */
     display: flex;
     flex-direction: column;
 }
@@ -210,8 +210,14 @@ body{
         border-radius: 50%;
     }
 }
-
-.background:fullscreen{
+.logo{
+    display: flex;
+    justify-content: center;
+}
+.logo img{
+    width: 180px;
+}
+#background:fullscreen{
     position: fixed;
     z-index: 1;
     width: 100vw;
@@ -227,7 +233,7 @@ body{
     background-position: center 200px;
     background-size: 10%;
 }
-.background span {
+#background span {
     position: absolute;
     z-index: 1;
     display: block;
@@ -238,14 +244,14 @@ body{
     animation: animate 18s linear infinite;
 }
 
-.background span:nth-child(0) {
+#background span:nth-child(0) {
     left: 65%;
     width: 183px;
     height: 183px;
     bottom: -183px;
     animation-delay: 1s;
 }
-.background span:nth-child(1) {
+#background span:nth-child(1) {
     width: 159px;
     height: 159px;
     bottom: -159px;
@@ -258,49 +264,49 @@ body{
     bottom: -112px;
     animation-delay: 1s;
 }
-.background span:nth-child(3) {
+#background span:nth-child(3) {
     left: 47%;
     width: 154px;
     height: 154px;
     bottom: -154px;
     animation-delay: 3s;
 }
-.background span:nth-child(4) {
+#background span:nth-child(4) {
     left: 20%;
     width: 155px;
     height: 155px;
     bottom: -155px;
     animation-delay: 14s;
 }
-.background span:nth-child(5) {
+#background span:nth-child(5) {
     left: 72%;
     width: 125px;
     height: 125px;
     bottom: -125px;
     animation-delay: 12s;
 }
-.background span:nth-child(6) {
+#background span:nth-child(6) {
     left: 40%;
     width: 104px;
     height: 104px;
     bottom: -104px;
     animation-delay: 18s;
 }
-.background span:nth-child(7) {
+#background span:nth-child(7) {
     left: 61%;
     width: 114px;
     height: 114px;
     bottom: -114px;
     animation-delay: 34s;
 }
-.background span:nth-child(8) {
+#background span:nth-child(8) {
     left: 54%;
     width: 171px;
     height: 171px;
     bottom: -171px;
     animation-delay: 27s;
 }
-.background span:nth-child(9) {
+#background span:nth-child(9) {
     left: 38%;
     width: 112px;
     height: 112px;
