--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,12 +250,14 @@ body{
     height: 183px;
     bottom: -183px;
     animation-delay: 1s;
+    opacity: 0;
 }
 #background span:nth-child(1) {
     width: 159px;
     height: 159px;
     bottom: -159px;
     animation-delay: 3s;
+    opacity: 0;
 }
 .background span:nth-child(2) {
     left: 72%;
@@ -263,6 +265,7 @@ body{
     height: 112px;
     bottom: -112px;
     animation-delay: 1s;
+    opacity: 0;
 }
 #background span:nth-child(3) {
     left: 47%;
@@ -270,6 +273,7 @@ body{
     height: 154px;
     bottom: -154px;
     animation-delay: 3s;
+    opacity: 0;
 }
 #background span:nth-child(4) {
     left: 20%;
@@ -277,6 +281,7 @@ body{
     height: 155px;
     bottom: -155px;
     animation-delay: 14s;
+    opacity: 0;
 }
 #background span:nth-child(5) {
     left: 72%;
@@ -284,6 +289,7 @@ body{
     height: 125px;
     bottom: -125px;
     animation-delay: 12s;
+    opacity: 0;
 }
 #background span:nth-child(6) {
     left: 40%;
@@ -291,6 +297,7 @@ body{
     height: 104px;
     bottom: -104px;
     animation-delay: 18s;
+    opacity: 0;
 }
 #background span:nth-child(7) {
     left: 61%;
@@ -298,6 +305,7 @@ body{
     height: 114px;
     bottom: -114px;
     animation-delay: 34s;
+    opacity: 0;
 }
 #background span:nth-child(8) {
     left: 54%;
@@ -305,6 +313,7 @@ body{
     height: 171px;
     bottom: -171px;
     animation-delay: 27s;
+    opacity: 0;
 }
 #background span:nth-child(9) {
     left: 38%;
@@ -312,6 +321,7 @@ body{
     height: 112px;
     bottom: -112px;
     animation-delay: 44s;
+    opacity: 0;
 }
 /* ************** MEDIA QUERIES ***************/
 
