--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,4 @@
 body{
-    /* background-image: url("../img/lavande.png");
-    background-repeat: no-repeat;
-    background-position: center 200px;
-    background-size: 10%; */
     font-family: 'Shippori Mincho B1', serif;
     margin: 0px 80px 0px 80px;
 }
@@ -10,10 +6,11 @@ body{
     z-index: 2;
 }
 .titre{
+    font-size: 28px;
     margin: 0px;
 }
 .titreEsp{
-    font-size: 50px;
+    font-size: 30px;
     margin: 0px;
 }
 .header{
@@ -29,7 +26,7 @@ body{
     margin-left: auto;
     margin-right: auto;
     justify-content: center;
-    margin-top: 70px;
+    margin-top: 50px;
 }
 .compteAReb{
     display: flex;
@@ -146,7 +143,7 @@ body{
 .mainHeader{
     text-align: center;
     display: flex;
-    z-index: 2;
+    z-index: 10;
     background-color: white;
     position: -webkit-sticky;
     position: sticky;
@@ -322,6 +319,57 @@ body{
     bottom: -112px;
     animation-delay: 44s;
     opacity: 0;
+}
+#programme{
+    padding-top: 50px;
+}
+#programme h2{
+    font-size: 90px;
+    margin-top: 0;
+    z-index: 2;
+    padding-right: 55px;
+    margin-top: -30px;
+}
+.photoPrgm{
+    float: right;
+}
+#section1{
+    display: flex;
+    justify-content: flex-end;
+}
+#section1 img{
+    display: flex;
+    justify-content: flex-end;
+    z-index: 2;
+    padding-right: 100px;
+    padding-top: 100px;
+}
+.backgroundBlock{
+    width: 500px;
+    height: 500px;
+    background-color: #F9F0EA;
+    position: absolute;
+}
+.prgmEtTitre{
+    display: flex;
+    flex-direction: column;
+    z-index: 2;
+}
+.prgmEtTitre2{
+    display: flex;
+    flex-direction: column;
+    z-index: 2;
+}
+#section11{
+    display: flex;
+    padding-top: 100px;
+}
+#section11 img{
+    display: flex;
+    justify-content: flex-end;
+    z-index: 2;
+    padding-right: 100px;
+    padding-top: 100px;
 }
 /* ************** MEDIA QUERIES ***************/
 
