--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -371,6 +371,13 @@ body{
     padding-right: 100px;
     padding-top: 100px;
 }
+.bold{
+    font-weight: bold;
+}
+.prgmText{
+    text-align: left;
+    margin-left: -200px;
+}
 /* ************** MEDIA QUERIES ***************/
 
 @media (min-width:1920px){
