--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ body{
 .mainHeader{
     text-align: center;
     display: flex;
-    z-index: 10;
+    z-index: 3;
     background-color: white;
     position: -webkit-sticky;
     position: sticky;
@@ -319,7 +319,7 @@ body{
     animation-delay: 44s;
     opacity: 0;
 }
-#programme{
+#sections{
     padding-top: 50px;
 }
 #programme h2{
@@ -344,17 +344,13 @@ body{
     padding-top: 100px;
 }
 .backgroundBlock{
+    z-index: -1;
     width: 650px;
     height: 500px;
     background-color: #F9F0EA;
     position: absolute;
 }
-.prgmEtTitre{
-    display: flex;
-    flex-direction: column;
-    z-index: 2;
-}
-.prgmEtTitre2{
+.sectionTitre{
     display: flex;
     flex-direction: column;
     z-index: 2;
@@ -384,6 +380,39 @@ body{
 }
 .prgmText2{
     margin-left: 500px;
+}
+
+/* *********** SECTION 2 **************/
+
+#section2 {
+    display: flex;
+    /* align-items: center; */
+    margin-top: 120px;
+}
+#section2 h2{
+    margin-top: 40px;
+    font-size: 90px;
+    z-index: 2;
+}
+.infoText{
+    display: flex;
+    align-self: baseline;
+    margin-left: auto;
+}
+.backgroundBlockInfo{
+    z-index: 0;
+    width: 400px;
+    height: 300px;
+    background-color: #F9F0EA;
+    position: absolute;
+    margin-left: 600px;
+}
+
+/************* SECTION 3 *********/
+#section3 h2{
+    margin-top: 40px;
+    font-size: 90px;
+    z-index: 2;
 }
 /* ************** MEDIA QUERIES ***************/
 
