design partie Informations en lorem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,16 +401,17 @@ body{
 }
 .backgroundBlockInfo{
     z-index: 0;
-    width: 400px;
-    height: 300px;
+    width: 800px;
     background-color: #F9F0EA;
-    position: absolute;
-    margin-left: 600px;
+    position: relative;
+    margin-top: -200px;
+    margin-left: 15%;
+    padding: 20px;
 }
 
 /************* SECTION 3 *********/
 #section3 h2{
-    margin-top: 40px;
+    position: relative;
     font-size: 90px;
     z-index: 2;
 }
