test canvas (pas fonctionnel)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -415,6 +415,9 @@ body{
     font-size: 90px;
     z-index: 2;
 }
+#zoneCanvas{
+    z-index: 0;
+}
 /* ************** MEDIA QUERIES ***************/
 
 @media (min-width:1920px){
