--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,6 +419,10 @@ body{
     z-index: 0;
     position: absolute;
 }
+#zoneCanvas1{
+    position: absolute;
+    z-index: -1;
+}
 /* ************** MEDIA QUERIES ***************/
 
 @media (min-width:1920px){
