--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,9 +184,6 @@ body{
 .allInfo{
     text-align: center;
 }
-.emoji{
-    width: 10%;
-}
 .hebergement1{
     border: 1px solid black;
     width: 200px;
@@ -422,6 +419,37 @@ body{
 #zoneCanvas1{
     position: absolute;
     z-index: -1;
+}
+/* ********** SECTION PERSONNAGES ************ */
+.emoji{
+    width: 10%;
+    border: 1px solid black;
+    border-radius: 11.5px;
+    margin: 10px;
+}
+.emoji img{
+    width: 100%;
+    border-radius: 10px;
+}
+.emoji h3{
+    font-weight:bold; 
+    margin-top: 0; 
+    margin-bottom: 0;
+}
+.emoji p{
+    margin-top: 0;
+}
+.statutEmoji{
+    display: block;
+    border-radius: 0 0 10px 10px;
+    color: white;
+    background-color: #183f28;
+    box-shadow: inset 0 2px 2px 0 rgb(0 0 0 / 100%);
+}
+.emojiRow1{
+    display: flex;
+}
+.emojiRowOverall{
 }
 /* ************** MEDIA QUERIES ***************/
 
