finalisation design Personnages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -448,8 +448,7 @@ body{
 }
 .emojiRow1{
     display: flex;
-}
-.emojiRowOverall{
+    justify-content: center;
 }
 /* ************** MEDIA QUERIES ***************/
 
