--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,13 +429,13 @@ html{
 }
 /* ********** SECTION PERSONNAGES ************ */
 .emoji{
-    width: 10%;
+    width: 15%;
     border: 1px solid black;
     border-radius: 11.5px;
-    margin: 30px;
+    margin: 15px;
 }
 .emoji img{
-    width: 100%;
+    width: 70%;
     border-radius: 10px;
 }
 .emoji h3{
@@ -445,6 +445,7 @@ html{
 }
 .emoji p{
     margin-top: 0;
+    font-style: italic;
 }
 .statutEmoji{
     display: block;
@@ -452,11 +453,14 @@ html{
     color: white;
     background-color: #183f28;
     box-shadow: inset 0 2px 2px 0 rgb(0 0 0 / 100%);
+    padding: 8px;
 }
 .emojiRow1{
     display: flex;
     justify-content: center;
 }
+/* Fin section personnage */
+
 #Programme{
     height: 140px;
 }
@@ -465,6 +469,15 @@ html{
 }
 #Personnages{
     height: 40px;
+}
+.logoMcDo{
+    width: 10%;
+}
+.tagLineMcdo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 /* ************** MEDIA QUERIES ***************/
 
