--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,6 @@ html{
     margin-bottom: 25px;
 }
 .header2{
-    /* margin-top: 300px; */
     display: flex;
     flex-direction: column;
 }
@@ -429,13 +428,13 @@ html{
 }
 /* ********** SECTION PERSONNAGES ************ */
 .emoji{
-    width: 15%;
-    border: 1px solid black;
+    width: 20%;
     border-radius: 11.5px;
     margin: 15px;
+    box-shadow: 10px 10px 20px rgb(0 0 0 / 15%);
 }
 .emoji img{
-    width: 70%;
+    width: 60%;
     border-radius: 10px;
 }
 .emoji h3{
@@ -478,6 +477,74 @@ html{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+/* SECTION HEBERGEMENT */
+
+#section4 h2{
+    position: relative;
+    font-size: 90px;
+    z-index: 2;
+}
+.hebergement{
+    width: 300px;
+    height: 450px;
+    margin: 15px;
+    border-radius: 11.5px;
+    box-shadow: 10px 10px 20px rgb(0 0 0 / 15%);
+    overflow: hidden;
+    flex-direction: column;
+}
+#hebergement1{
+    background-color: #FF5A5F;
+    display: flex;
+    justify-content: flex-end;
+}
+.hebergement1Text{
+    font-weight: bolder;
+    font-size: 30px;
+    margin: 0;
+}
+.fab{
+    font-size: 80px;
+    color: white;
+}
+.hebergement img{
+    width: 60%;
+}
+.hebergement a{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+#hebergement2{
+    background-image: url("../img/bellugue1.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.tagLineHeber{
+    border-radius: 0 0 10px 10px;
+    color: black;
+    background-color: white;
+    padding: 20px;
+    font-weight: bold;
+}
+.airbnb{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-bottom: 150px;
+}
+.tagLineHeber1{
+    border-radius: 0 0 10px 10px;
+    color: black;
+    background-color: white;
+    padding: 20px;
+    font-weight: bold;
+    margin-top: 129%;
+}
+.lienBellugue{
+    text-decoration: none;
 }
 /* ************** MEDIA QUERIES ***************/
 
