--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -485,6 +485,7 @@ html{
     font-weight:bold; 
     margin-top: 0; 
     margin-bottom: 0;
+    padding: 15px 0px;
 }
 .emoji p{
     margin-top: 0;
