--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -801,6 +801,12 @@ footer{
     }
     #section1{
         flex-direction: column;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    #section1 img {
+        padding-right: 0px;
+        padding-top: 0px;
     }
     #programme h2{
         font-size: 30px;
@@ -819,6 +825,7 @@ footer{
     }
     #section11 img{
         padding: 0px;
+        width: 118%;
     }
     .prgmText2{
         margin: 0px;
@@ -847,7 +854,7 @@ footer{
     .backgroundBlockInfo{
         width: auto;
         margin-left: 0;
-        margin-top: -100px;
+        margin-top: 0px;
         padding: 20px 40px 20px;
     }
     .backgroundBlockInfo1{
@@ -862,8 +869,14 @@ footer{
     .backgroundBlockInfo p{
         font-size: 15px;
     }
+    .infoText{
+        margin-left: 0px;
+        width: auto;
+        height: auto;
+    }
     .infoText img{
         width: 375px;
+        height: 300px;
     }
     .backgroundBlock{
         width: 375px;
@@ -902,5 +915,15 @@ footer{
     }
     .support{
         margin: 0 20px 20px;
+    }
+    .backgroundBlock1{
+        display: none;
+    }
+    .backgroundBlockInfo1{
+        display: none;
+    }
+    .photoPrgm{
+        width: 100%;
+        height: 100%;
     }
 }
